# cafe-polkit

./: .build.yml  .travis.yml  AUTHORS  COPYING  HACKING  NEWS  README  autogen.sh  cafe-polkit.pot  configure.ac  index.html  makepot  mate-polkit.pot  output_4c419865331949fe3e49c2370b78dfced2830de5
.tx/: config
2022-08-23-135012-9018-cppcheck@ebcdb13e4ad2_GithubActions/: 0.html  output_ebcdb13e4ad2fe1ac7d84a358d05903303db6414
2022-08-23-135237-2505-cppcheck@6ea85a941bbc_GithubActions/: output_6ea85a941bbc8e2c8f5de9a725f1ccb7d0e73d31
2022-08-23-140223-9374-cppcheck@3a5adf973745_GithubActions/: commitmsg  output_3a5adf973745879a6791bc6ba8fe2667b09dbf05
2022-08-23-141014-7297-cppcheck@25c21fb366fd_GithubActions/: output_25c21fb366fd2f49d25e81550eff7e40b3d0eb23
2022-08-23-141949-3346-cppcheck@6b051f5c1a9d_master/: commitmsg  index.html  output_6b051f5c1a9db07e94adc5d98a469e579b6b06ba
2022-08-23-143258-3933-cppcheck@9b051d4af05b_renameCafe/: 0.html  commitmsg  output_9b051d4af05ba2852b145e4b13a25fe103fc189b
2022-08-23-144330-1907-cppcheck@edc9d4b9bc3d_master/: commitmsg  output_edc9d4b9bc3d81c22e7d2ad6ac7a60af088269e3  stats.html
2022-08-23-145754-7818-cppcheck@5c16101e6c64_renameCafe/: output_5c16101e6c64de6b44a5b98466711c19a92677f8
2022-08-23-150340-4936-cppcheck@c6ee8dc11a90_master/: output_c6ee8dc11a90f3981ff813d9dd6d3e8d00e11af7
po/: POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  (+108 more)
src/: Makefile.am  main.c  polkit-cafe-authentication-agent-1.desktop.in.in  polkit-mate-authentication-agent-1.desktop.in.in  polkitcafeauthenticationdialog.c  polkitcafeauthenticationdialog.h  polkitcafeauthenticator.c  polkitcafeauthenticator.h  polkitcafelistener.c  polkitmateauthenticationdialog.c  polkitmateauthenticationdialog.h  polkitmateauthenticator.c  polkitmateauthenticator.h  polkitmatelistener.c  polkitmatelistener.h
(+62 files in other folders)
